# SaveCircle-Backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: README.md
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
